--- a/cv.tex
+++ b/cv.tex
@@ -54,7 +54,7 @@
 %% \homepage{elephantlaboratories.com}                         % optional, remove / comment the line if not wanted
 \social[github]{prismofeverything}                              % optional, remove / comment the line if not wanted
 \social[linkedin]{ryankspangler}                        % optional, remove / comment the line if not wanted
-\social[twitter]{ryanspangler}                             % optional, remove / comment the line if not wanted
+%% \social[twitter]{ryanspangler}                             % optional, remove / comment the line if not wanted
 %\extrainfo{additional information}                 % optional, remove / comment the line if not wanted
 %\photo[64pt][0.4pt]{picture}                       % optional, remove / comment the line if not wanted; '64pt' is the height the picture must be resized to, 0.4pt is the thickness of the frame around it (put it to 0pt for no frame) and 'picture' is the name of the picture file
 %% \quote{Assembling the Biology of the Future}
